--- a/CardGames/CardGameLib/CardGameLib.csproj
+++ b/CardGames/CardGameLib/CardGameLib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Controllers\BlackJackController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\PokerController.cs" />
+    <Compile Include="Models\Blackjack.cs" />
     <Compile Include="Models\Card.cs" />
     <Compile Include="Models\PokerPlayer.cs" />
     <Compile Include="Models\Deck.cs" />
